--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
+    "nodemailer": "^6.9.6",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "stripe": "^12.5.0"
   }
 }
